--- a/sites/all/themes/slac/sass/pages.scss
+++ b/sites/all/themes/slac/sass/pages.scss
@@ -632,6 +632,18 @@ footer .block-menu {
     }
   }
 
+  .not-front{
+    #content > div,
+    #content > article{
+      width: 100%;
+      margin: 0;
+    }
+    #content > #page-title{
+      margin-left: 0;
+    }
+  }
+
+
   // mobile menu
   #mobile-menu-wrap{
     display: block;
